--- a/app-dev/styles/base/layout.css
+++ b/app-dev/styles/base/layout.css
@@ -183,6 +183,26 @@
 			margin: 0 15px 0 -13px;
 		}
 
+		#app-header-chief-bar > .width-wrap > .docking {
+			height: 100%;
+			background-color: rgba(255, 128, 128, 0.2);
+		}
+
+		#search-box, #my-assets {
+			height: 19px;
+		}
+
+		#search-box {
+			width: 140px;
+			background-color: white;
+		}
+
+		#my-assets {
+			width: 120px;
+			background-color: white;
+			margin-left: 10px;
+		}
+
 
 
 #app-footer {
